# declaro

./: Cargo.toml  Dioxus.toml  README.md  default.nix  example.nix  flake.nix
assets/: main.css
src/: ast.rs  components.rs  hooks.rs  main.rs  router.rs
src/components/: attributeSet.rs  attribute_set.rs  expression.rs  lambda.rs  refInput.rs  ref_input.rs  stringInput.rs  string_input.rs
