[package]
name = "declaro"
version = "0.1.0"
authors = ["Florian Schunk <florian.git@repatr.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
closure = "0.3.0"
dioxus = { version = "0.7.3", features = ["router"] }
syntax = { git = "https://github.com/rummatee/nil" }
nix-interop = { git = "https://github.com/rummatee/nil" }
ide = { git = "https://github.com/rummatee/nil" }
rowan = "0.16.1"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-free-icons = { version = "0.10", features = ["font-awesome-solid"] }
rfd = "0.17.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = [
    "dioxus/desktop",
]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
